manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: personal-website-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: personal-website
  template:
    metadata:
      labels:
        app: personal-website
    spec:
      containers:
        - name: personal-website
          image: personal-website:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
