manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: personal-website-service
  labels:
    app: personal-website
spec:
  type: LoadBalancer
  ports:
    - port: 80
      name: http
  selector:
    app: personal-website
